# pAGN

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.html  README.md  api.html  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.html  requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: docs.yml
_sources/: README.md.txt  examples.rst.txt  requirements.txt
api/: Sirko.html  Thompson.html
docs/: api.rst  conf.py  examples.rst  index.rst
docs/api/: Sirko.rst  Thompson.rst
docs/source/: conf.py  index.rst
pagn/: Sirko.py  Thompson.py  __init__.py  __version__.py  constants.py  opacities.py
utils/: examples.ipynb
utils/opacity_sources/: AGS05.OP17  Gz030.x70  opacity_links.txt
utils/opacity_sources/Semenov2003/: Readme_Semenov2003FortranCode.txt  generate_combined_tables.py  opacity.f  opacity.inp  opacitypy.f  opacitypy.pyf  pysemenov_module.sh  test_pysemenov.py
